--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <p id="completion-message" class="hidden">🎉 Congratulations! You've finished your routine! 🎉</p>
   </div>
-  <audio id="ping-sound" src="ping.mp3"></audio>
+  <audio id="ping-sound" src="ping.wav" preload="auto"></audio>
   <audio id="clap-sound" src="clap.wav"></audio>
   <script src="script.js"></script>
 </body>
