--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <input type="number" id="task-time" placeholder="Time in minutes">
       <textarea id="task-feeling" placeholder="How will you feel after completing this?"></textarea>
       <div class="button-container">
-        <button onclick="submitNewTask()">Add</button>
+        <button onclick="submitNewTask()">Ok</button>
         <button onclick="closeModal()">Cancel</button>
       </div>
     </div>
